--- a/filen-swift/Cargo.toml
+++ b/filen-swift/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
 serde_cbor = "0.11.2"
 serde = "*"
 uuid = "1.18.1"
+tokio-util = "0.7.16"
 
 [build-dependencies]
 uniffi = { version = "0.29.4", features = ["build"] }
